--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,13 @@ name = "AirChem"
 uuid = "631376dc-0218-429a-b833-644e14256f8e"
 authors = ["Christian Schmidt <christian.schmidt@boku.ac.at>"]
 version = "0.1.0"
+
+[deps]
+CFTime = "179af706-886a-5703-950a-314cd64e0468"
+NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
+
+[compat]
+CFTime = "0.2.2"
+NCDatasets = "0.14.8"
+Rasters = "0.14.6"
