--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,23 @@ authors = ["Christian Schmidt <christian.schmidt@boku.ac.at>"]
 version = "0.1.0"
 
 [deps]
+ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
 CFTime = "179af706-886a-5703-950a-314cd64e0468"
+CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+NetCDF = "30363a11-5582-574a-97bb-aa9a979735b9"
+Proj = "c94c279d-25a6-4763-9509-64d165bea63e"
 Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
+YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
+ArchGDAL = "0.10.10"
 CFTime = "0.2.2"
+CoordinateTransformations = "0.6.4"
+HDF5 = "0.17.2"
 NCDatasets = "0.14.8"
+NetCDF = "0.12.2"
+Proj = "1.9.0"
 Rasters = "0.14.6"
+YAML = "0.4.14"
